[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/spawner_tilemap/editor/tile_to_scene_row.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 3.0
content_margin_right = 3.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 0.0980392, 0.113725, 0.152941, 1 )
corner_radius_top_left = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 1.0
content_margin_bottom = 1.0
bg_color = Color( 1, 1, 1, 1 )
corner_radius_top_right = 2
corner_radius_bottom_right = 2

[node name="TileToSceneRow" type="MarginContainer"]
margin_right = 338.0
margin_bottom = 90.0
mouse_filter = 1
custom_constants/margin_right = 15
custom_constants/margin_top = 10
custom_constants/margin_left = 15
custom_constants/margin_bottom = 10
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 15.0
margin_top = 10.0
margin_right = 323.0
margin_bottom = 100.0
custom_constants/separation = 10
alignment = 1

[node name="TileTexture" type="TextureRect" parent="HBoxContainer"]
margin_right = 90.0
margin_bottom = 90.0
rect_min_size = Vector2( 90, 90 )
size_flags_horizontal = 4
size_flags_vertical = 4
expand = true

[node name="MarginContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 100.0
margin_right = 308.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_constants/separation = 2
alignment = 1

[node name="Information" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_right = 208.0
margin_bottom = 41.0
size_flags_vertical = 4
custom_constants/separation = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/MarginContainer/Information"]
margin_right = 208.0
margin_bottom = 16.0
custom_constants/separation = 0

[node name="IdLabel" type="Label" parent="HBoxContainer/MarginContainer/Information/HBoxContainer"]
margin_right = 51.0
margin_bottom = 16.0
custom_styles/normal = SubResource( 4 )
text = "TILE ID"

[node name="IdValueLabel" type="Label" parent="HBoxContainer/MarginContainer/Information/HBoxContainer"]
margin_left = 51.0
margin_right = 91.0
margin_bottom = 16.0
hint_tooltip = "tile_id: 1000"
mouse_filter = 1
size_flags_horizontal = 8
custom_colors/font_color = Color( 0.223529, 0.223529, 0.223529, 1 )
custom_styles/normal = SubResource( 3 )
text = "1000"
align = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/MarginContainer/Information"]
margin_top = 21.0
margin_right = 208.0
margin_bottom = 41.0
custom_constants/separation = 5

[node name="SceneNameLabel" type="Label" parent="HBoxContainer/MarginContainer/Information/HBoxContainer2"]
margin_top = 3.0
margin_right = 191.0
margin_bottom = 17.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Scene: PackedScene.tscn"
valign = 1

[node name="SceneSettingsButton" type="Button" parent="HBoxContainer/MarginContainer/Information/HBoxContainer2"]
margin_left = 196.0
margin_right = 208.0
margin_bottom = 20.0
hint_tooltip = "Change the settings for this scene to add custom data or change it's spawning process"

[node name="Resource" type="HBoxContainer" parent="HBoxContainer/MarginContainer"]
margin_top = 43.0
margin_right = 208.0
margin_bottom = 63.0
size_flags_horizontal = 3
size_flags_vertical = 3
